--- a/agenda.html
+++ b/agenda.html
@@ -34,8 +34,8 @@
     CUERPO DE LA PÁGINA
 
     
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi vero sapiente debitis explicabo inventore voluptatum illum est, quibusdam culpa cumque quas. Doloribus officia quis deserunt pariatur eaque modi molestias ipsa?
-    </p>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi vero sapiente debitis explicabo inventore voluptatum illum est, quibusdam culpa cumque quas. Doloribus officia quis deserunt pariatur eaque modi molestias ipsa?
+    </h1>
 
   </main>  
 
